Made the card a fixed size and fixed a lot of spacing. There are issues with the spacing when the title or description is especially long.

--- a/src/App.css
+++ b/src/App.css
@@ -15,12 +15,41 @@
   opacity: 1; /* Start fully visible */
   animation: fadeOut 0.5s forwards; /* Animation name, duration, and forwards to retain styles */
 }
-.w-40 {
-  width: 40%;
+
+.app {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
+
+.card {
+  height: 80vh;
+  width: 40vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.cardImg {
+  width: 80%;
+  height: 55%;
+}
+
 .search {
   margin-bottom: 20px;
   margin-top: 20px;
+}
+
+.text {
+  width: 80%;
+  font-weight: 400;
+  margin: 0;
+}
+
+#year {
+  margin-bottom: 0;
 }
 
 @keyframes fadeOut {
@@ -42,8 +71,8 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+  height: 100vh;
 }
 
 .logo {
@@ -59,6 +88,15 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
+.buttons {
+  display: flex;
+  width: 80%;
+}
+
+.filler {
+  flex-grow: 8;
+}
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
@@ -72,11 +110,6 @@
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
   }
-}
-
-.card {
-  padding: 2em;
-  display: flex;
 }
 
 .read-the-docs {
