--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,8 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color-scheme: light;
+  height: 100vh;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -30,10 +29,12 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
-  min-height: 100vh;
+  height: 100vh;
+}
+
+.center {
+  align-self: center;
 }
 
 h1 {
@@ -41,21 +42,18 @@ h1 {
   line-height: 1.1;
 }
 #expandable-svg {
-  width: 100px;
-  height: 100px;
+  width: 48px;
+  height: 48px;
   transition: transform 0.3s ease; /* Smooth transition */
   display: inline-block; /* Make the div wrap tightly around its content */
-  padding: 10px;
+
 }
 
 /* Hover effect */
 #expandable-svg:hover {
   transform: scale(1.1); /* Slightly increase the size */
 }
-.buttons {
-  display: flex;
-  justify-content: space-between;
-}
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
